# eden

./: .gitignore  BACKLOG.md  CLAUDE.md  CODEX.md  Cargo.toml  PROGRESS.md  REVIEW.md  justfile
.github/workflows/: ci-baseline.yml
config/: codex_analyst_output.schema.json  polymarket_markets.json.example
crates/eden-us/: Cargo.toml
crates/eden-us/src/: lib.rs  watchlist.rs
crates/eden-us/src/action/: tracker.rs  workflow.rs
crates/eden-us/src/graph/: decision.rs  graph.rs  insights.rs  propagation.rs
crates/eden-us/src/ontology/: mod.rs
crates/eden-us/src/pipeline/: dimensions.rs  reasoning.rs  signals.rs  world.rs
crates/eden-us/src/temporal/: analysis.rs  buffer.rs  causality.rs  lineage.rs  record.rs
data/: backtest_report.csv  backtest_report.json  backtest_results.txt  live_snapshot.json  us_live_snapshot.json
data/eden.db/: 000031.sst  000034.sst  000039.sst  000044.sst  IDENTITY  LOG.old.1773811931020554  MANIFEST-000046
decisions/: README.md
decisions/2026-04-22/: 001-NXPI-long.json  002-NXPI-cancel.json  003-CL-short.json  004-CL-cancel.json  005-MSTR-long.json  006-MSTR-exit.json  007-inherited-US-cleanup.json  008-ISRG-long.json  009-ISRG-exit.json  010-MSTR-long-v2.json  011-MSTR-v2-exit.json
decisions/2026-04-23/: 001-9868-SELL.json  002-1299-SELL-half.json  003-MDB-SELL-T2.json  methodology-v0.2.md  us-daily.md  wake-actor-spec.md
decisions/2026-04-26/: polymarket-feasibility.md  polymarket-legacy-removal.md
decisions/schemas/: session-recap-v1.json  v1.json
docs/: README.md  api-consumer-migration.md  api-surfaces.md  frontend-api.md  operator_session_2026-04-14.md  operator_session_hk_2026-04-15.md  operator_session_hk_2026-04-16.md  operator_session_us_2026-04-15_postfix.md  operator_session_us_2026-04-15_v2.md  session_2026-04-17_overnight.md
docs/architecture/: api-consumer-migration.md  api-surfaces.md  eden-cc-closed-loop-2026-04-19.md  frontend-architecture.md  intent-system-roadmap.md  perception-graph-sync-contract.md  repo-tree-convergence.md  state_inference_research.md
docs/domain/: polymarket.md
docs/prompts/: README.md  metrics_targets.md  operator_discipline_rules.md  operator_weekend_prompt_v1.md  prompts_changelog.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts
frontend/src/: main.tsx  router.tsx  vite-env.d.ts
logs/monitor/: us_palantir_monitor_20260326_010800.jsonl
scripts/: README.md  evaluate_signals.py  health_report.mjs  record_hk_ticks.py  replay_parquet.py
scripts/analysis/: analyze_recommendation_journal.py
scripts/ops/: day_run_supervisor.py  generate_decision_index.sh  run_codex_analyst.py  start_api.sh  start_stack.sh  trim_target_debug.sh  (+1 more)
src/: agent_codex.rs  agent_llm.rs  agent_llm_tests.rs  api.rs  cases.rs  cli.rs  lib.rs  live_snapshot.rs  main.rs  math.rs  runtime_loop.rs
static/: index.html
tests/: belief_field_integration.rs  decision_ledger_integration.rs  dream_integration.rs  runtime_preflight_integration.rs
(+583 files in other folders)
