[package]
name = "eden"
version = "0.1.0"
edition = "2021"

[dependencies]
longport = "3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
futures = "0.3"
petgraph = "0.6"
surrealdb = { version = "2", features = ["kv-rocksdb"] }

[dev-dependencies]
rust_decimal_macros = "1"
