[package]
name = "eden"
version = "0.1.0"
edition = "2021"

[features]
default = []
persistence = ["dep:surrealdb"]

[dependencies]
longport = "3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
futures = "0.3"
petgraph = "0.6"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
surrealdb = { version = "2", features = ["kv-rocksdb"], optional = true }
axum = { version = "0.7", features = ["json", "query", "tokio"] }
tower-http = { version = "0.6", features = ["cors"] }
base64 = "0.22"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
rust_decimal_macros = "1"
