[package]
name = "eden-us"
version = "0.1.0"
edition = "2021"

[dependencies]
eden = { path = "../.." }
longport = "3.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rust_decimal = { version = "1", features = ["serde"] }
time = { version = "0.3", features = ["serde", "serde-well-known", "macros"] }
futures = "0.3"
petgraph = "0.6"

[dev-dependencies]
rust_decimal_macros = "1"
